added streamrendering attr

--- a/Components/Pages/ReservationPages/Index.razor
+++ b/Components/Pages/ReservationPages/Index.razor
@@ -5,6 +5,7 @@
 @using Table4U.Data
 @implements IAsyncDisposable
 @inject IDbContextFactory<Table4U.Data.Table4UContext> DbFactory
+@attribute [StreamRendering]
 
 <PageTitle>Reservations</PageTitle>
 
