--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,55 @@
 ﻿@page "/"
+@using Microsoft.EntityFrameworkCore
+@using Table4U.Data
+@implements IAsyncDisposable
+@inject IDbContextFactory<Table4U.Data.Table4UContext> DbFactory
+@rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Current time: @DateTime.Now</h1>
 
-Welcome to your new app.
+<h2>Reservations on this day:</h2>
+
+<div style="display:flex; flex-wrap:wrap">
+
+@* @foreach (var item in reservations.Where(r=> r.Date.Day == DateTime.Now.Day))
+{
+	<Card Style="width:18rem; margin:1rem; flex-wrap:wrap">
+		<CardBody>
+			<CardTitle>@item.Name</CardTitle>
+			<CardSubTitle>at: @item.Time, table: @item.TableId </CardSubTitle>
+			<CardText>For @item.PeopleCount @(item.PeopleCount > 1 ? "people" : "person")</CardText>
+		</CardBody>
+	</Card>
+	} *@
+
+	@foreach (var item in tables)
+	{
+		<Card Style="width:13rem; height:13rem; margin:1rem">
+			<CardTitle>Table ID: @item.Id</CardTitle>
+				@foreach (var res in reservations.Where(r=>r.Date.Day == DateTime.Now.Day && (r.TableId == item.Id)))
+				{
+				<a class="btn btn-primary my-2 mx-2" href="@($"reservations/details?id={res.Id}")">@res.Name, at: @res.Time</a>
+				}
+		</Card>
+	}
+</div>
+
+
+@code{
+	Table4UContext context = default!;
+	private List<Reservation> reservations;
+	private List<Table> tables;
+
+	protected override void OnInitialized()
+	{
+		context = DbFactory.CreateDbContext();
+		reservations = context.Reservation.ToList();
+		tables = context.Table.ToList();
+	}
+
+
+	public async ValueTask DisposeAsync() => await context.DisposeAsync();
+
+}
