--- a/Components/Pages/ReservationPages/Edit.razor
+++ b/Components/Pages/ReservationPages/Edit.razor
@@ -44,18 +44,24 @@ else
                 </div>
                 <div class="mb-3">
                     <label for="tableid" class="form-label">TableId:</label>
-                    <InputNumber id="tableid" @bind-Value="Reservation.TableId" class="form-control" aria-required="true"/>
+                    <InputSelect id="tableid" @bind-Value="Reservation.TableId" class="form-control" aria-required="true">
+                        @foreach (var item in tables.Where(r=> r.Slot >= Reservation.PeopleCount))
+                        {
+                            <option value="@item.Id">@item.Id</option>
+                        }
+                    </InputSelect>
                     <ValidationMessage For="() => Reservation.TableId" class="text-danger" />
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <a class="btn btn-primary" href="/reservations">Back to List</a>
+                </div>
             </EditForm>
         </div>
     </div>
 }
 
-<div>
-    <a href="/reservations">Back to List</a>
-</div>
+
 
 @code {
     [SupplyParameterFromQuery]
@@ -63,11 +69,13 @@ else
 
     [SupplyParameterFromForm]
     private Reservation? Reservation { get; set; }
+    private List<Table> tables;
 
     protected override async Task OnInitializedAsync()
     {
         using var context = DbFactory.CreateDbContext();
         Reservation ??= await context.Reservation.FirstOrDefaultAsync(m => m.Id == Id);
+        tables = context.Table.ToList();
 
         if (Reservation is null)
         {
