--- a/Components/Pages/ReservationPages/Create.razor
+++ b/Components/Pages/ReservationPages/Create.razor
@@ -48,7 +48,7 @@
             </div>        
             <div>
                 <button type="submit" class="btn btn-success">Create</button>
-                <a class="btn btn-primary" href="/reservations">Back to List</a>
+                <a class="btn btn-secondary" onclick="history.back()">Back</a>
             </div>
         </EditForm>
     </div>
