--- a/Components/Pages/ReservationPages/Edit.razor
+++ b/Components/Pages/ReservationPages/Edit.razor
@@ -54,7 +54,7 @@ else
                 </div>
                 <div>
                     <button type="submit" class="btn btn-primary">Save</button>
-                    <a class="btn btn-primary" href="/reservations">Back to List</a>
+                    <a class="btn btn-secondary" onclick="history.back()">Back</a>
                 </div>
             </EditForm>
         </div>
