--- a/Components/Pages/TablePages/Create.razor
+++ b/Components/Pages/TablePages/Create.razor
@@ -28,7 +28,7 @@
             </div>    
             <div>
                 <button type="submit" class="btn btn-primary">Create</button>
-                <a class="btn btn-primary" href="/tables">Back to List</a>
+                <a class="btn btn-secondary" onclick="history.back()">Back</a>
             </div>
         </EditForm>
     </div>
