--- a/Components/Pages/TablePages/Details.razor
+++ b/Components/Pages/TablePages/Details.razor
@@ -23,8 +23,8 @@
             <dd class="col-sm-10">@table.IsReserved</dd>
         </dl>
         <div>
-            <a href="@($"/tables/edit?id={table.Id}")">Edit</a> |
-            <a href="@($"/tables")">Back to List</a>
+            <a class="btn btn-primary" href="@($"/tables/edit?id={table.Id}")">Edit</a> |
+            <a class="btn btn-secondary" onclick="history.back()">Back</a>
         </div>
     }
 </div>
