--- a/Components/Pages/TablePages/Edit.razor
+++ b/Components/Pages/TablePages/Edit.razor
@@ -33,15 +33,17 @@ else
                     <InputCheckbox id="isreserved" @bind-Value="Table.IsReserved" class="form-check-input" aria-required="true"/>
                     <ValidationMessage For="() => Table.IsReserved" class="text-danger" />
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <a class="btn btn-secondary" onclick="history.back()">Back</a>
+                </div>
+
             </EditForm>
         </div>
     </div>
 }
 
-<div>
-    <a href="/tables">Back to List</a>
-</div>
+
 
 @code {
     [SupplyParameterFromQuery]
