--- a/Components/Pages/ReservationPages/Index.razor
+++ b/Components/Pages/ReservationPages/Index.razor
@@ -16,30 +16,39 @@
 
 @if (context == null)
 {
-    <p>Loading...</p>
+	<p>Loading...</p>
 }
 else
 {
-    <QuickGrid Class="table" Items="reservationsList">
-        <PropertyColumn Property="reservation => reservation.Name" Sortable="true" class="align-content-center justify-content-center" />
-        <PropertyColumn Property="reservation => reservation.Date" Format="yyyy.MM.dd" Sortable="true" class="align-content-center justify-content-center" />
-        <PropertyColumn Property="reservation => reservation.Time" Sortable="true" class="align-content-center justify-content-center" />
-        <PropertyColumn Property="reservation => reservation.PeopleCount" Sortable="true" class="align-content-center justify-content-center" />
-        <PropertyColumn Property="reservation => reservation.TableId" Sortable="true" class="align-content-center justify-content-center" />
+	<QuickGrid Class="table" Items="reservationsList" Pagination="state">
+		<PropertyColumn Property="reservation => reservation.Name"  Sortable="true" class="align-content-center justify-content-center" >
+			<ColumnOptions>
+				<div>
+					<input @onchange="Query" value="@namefilter" type="search" autofocus />
+				</div>
+			</ColumnOptions>
+		</PropertyColumn>
+		<PropertyColumn Property="reservation => reservation.Date" Format="yyyy.MM.dd" Sortable="true" class="align-content-center justify-content-center" />
+		<PropertyColumn Property="reservation => reservation.Time" Sortable="true" class="align-content-center justify-content-center" />
+		<PropertyColumn Property="reservation => reservation.PeopleCount" Sortable="true" class="align-content-center justify-content-center" />
+		<PropertyColumn Property="reservation => reservation.TableId" Sortable="true" class="align-content-center justify-content-center" />
 
-        <TemplateColumn Context="reservation">
-            <a class="btn btn-primary mx-2" href="@($"reservations/edit?id={reservation.Id}")">Edit</a> |
-            <a class="btn btn-success mx-2" href="@($"reservations/details?id={reservation.Id}")">Details</a> |
-            <Button class="btn btn-danger mx-2" @onclick="(args) => onDelete(args, reservation)">Delete</Button>
-        </TemplateColumn>
-    </QuickGrid>
+		<TemplateColumn Context="reservation">
+			<a class="btn btn-primary mx-2" href="@($"reservations/edit?id={reservation.Id}")">Edit</a> |
+			<a class="btn btn-success mx-2" href="@($"reservations/details?id={reservation.Id}")">Details</a> |
+			<Button class="btn btn-danger mx-2" @onclick="(args) => onDelete(args, reservation)">Delete</Button>
+		</TemplateColumn>
+	</QuickGrid>
+	<Paginator State="state"/>
 }
 <ConfirmDialog @ref="confirmDialog" />
 
 @code {
 
 	private Table4UContext context = default!;
-	private IQueryable<Reservation> reservationsList;
+	private string namefilter = "";
+	private IQueryable<Reservation>? reservationsList;
+	PaginationState state = new PaginationState { ItemsPerPage = 10 };
 
 	private ConfirmDialog confirmDialog = default!;
 	Reservation reservation { get; set; } = new();
@@ -49,8 +58,7 @@ else
 	{
 		await Task.Delay(1);
 		context = DbFactory.CreateDbContext();
-		reservationsList = context.Reservation;
-
+		reservationsList = context.Reservation.Where(r => r.Name.Contains(namefilter));
 	}
 
 	public async ValueTask DisposeAsync() => await context.DisposeAsync();
@@ -73,8 +81,13 @@ else
 		{
 			using var context = DbFactory.CreateDbContext();
 			context.Reservation.Remove(reservation!);
-			reservationsList = reservationsList.Where(r => r.Id != reservation!.Id);
+			reservationsList = reservationsList!.Where(r => r.Id != reservation!.Id);
 			await context.SaveChangesAsync();
 		}
+	}
+	private void Query()
+	{
+		reservationsList = reservationsList.Where(r => r.Name.Contains(namefilter));
+		this.StateHasChanged();
 	}
 }
