--- a/Components/Pages/TablePages/Index.razor
+++ b/Components/Pages/TablePages/Index.razor
@@ -13,7 +13,7 @@
 <h1>Tables</h1>
 
 
-<a class="my-3" href="tables/create"><span class="bi bi-plus-square-fill" aria-hidden="true"></span></a>
+<a class="my-3 btn btn-primary" href="tables/create"><span class="bi bi-plus-square-fill" aria-hidden="true"></span>Add new</a>
 
 @if (context == null)
 {
@@ -24,10 +24,9 @@ else
     <QuickGrid Class="table" Items="tableList" Pagination="state">
         <PropertyColumn Property="table => table.Id" class="align-content-center justify-content-center" />
         <PropertyColumn Property="table => table.Slot" class="align-content-center justify-content-center" />
-        <PropertyColumn Property="table => table.IsReserved" class="align-content-center justify-content-center" />
 
-        <TemplateColumn Context="table">
-            <a class="btn btn-primary mx-2" href="@($"tables/edit?id={table.Id}")">Edit</a>
+        <TemplateColumn Context="table" class="col-justify-end">
+            <a class="btn btn-primary mx-2 " href="@($"tables/edit?id={table.Id}")">Edit</a>
             <a class="btn btn-success mx-2" href="@($"tables/details?id={table.Id}")">Details</a>
             <Button @onclick="(args) => onDelete(args, table)" class="btn btn-danger mx-2">Delete</Button>
         </TemplateColumn>
@@ -47,7 +46,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        await Task.Delay(1);
+        // await Task.Delay(1);
         context = DbFactory.CreateDbContext();
         tableList = context.Table;
     }
